perf(category): CategoryService Redis 캐시 적용 (30분 TTL)
- CacheConfig: categories 30분 TTL 추가, As.WRAPPER_ARRAY로 교체
  (List<T> 직렬화 시 타입 래퍼 누락 문제 해결)
- CategoryService: getList/getTree @Cacheable, create/update/delete @CacheEvict
- CategoryResponse: @Jacksonized 추가, List.of() → ArrayList (역직렬화 지원)